Cutting down overful boxes in source3
This deals with more-or-less all of the ones dues to overlong code
lines. There are various places that perhaps might be handled by
re-writing some docs. More tricky are the non-trivial number that come
at the end-of-definition lines: they are outside of something that can
be changed in the source. There are also a reasonable number that are (I
think) in the syntax environments.

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -1523,7 +1523,8 @@
 %    \begin{macrocode}
 \cs_set:Npn \use_i_delimit_by_q_nil:nw  #1#2 \q_nil  {#1}
 \cs_set:Npn \use_i_delimit_by_q_stop:nw #1#2 \q_stop {#1}
-\cs_set:Npn \use_i_delimit_by_q_recursion_stop:nw #1#2 \q_recursion_stop {#1}
+\cs_set:Npn \use_i_delimit_by_q_recursion_stop:nw
+  #1#2 \q_recursion_stop {#1}
 %    \end{macrocode}
 % \end{macro}
 %
@@ -2041,7 +2042,8 @@
   {
     \cs_set_protected:Npn \__kernel_patch_args:nnnNNpn #1#2#3#4#5#6#
       { \@@_patch_args_aux:nnnNNnn {#1} {#2} {#3} #4 #5 {#6} }
-    \cs_set_protected:Npn \__kernel_patch_conditional_args:nnnNNpnn #1#2#3#4#5#6#
+    \cs_set_protected:Npn \__kernel_patch_conditional_args:nnnNNpnn
+      #1#2#3#4#5#6#
       { \@@_patch_args_aux:nnnNNnnn {#1} {#2} {#3} #4 #5 {#6} }
     \cs_set_protected:Npn \@@_patch_args_aux:nnnNNnn #1#2#3#4#5#6#7
       {
@@ -2060,7 +2062,8 @@
   }
   {
     \cs_set_protected:Npn \__kernel_patch_args:nnnNNpn #1#2#3 { }
-    \cs_set_protected:Npn \__kernel_patch_conditional_args:nnnNNpnn #1#2#3 { }
+    \cs_set_protected:Npn \__kernel_patch_conditional_args:nnnNNpnn
+      #1#2#3 { }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -2582,7 +2585,8 @@
   {
     \cs_set:Npn \cs_split_function:N ##1
       {
-        \exp_after:wN \exp_after:wN \exp_after:wN \@@_split_function_auxi:w
+        \exp_after:wN \exp_after:wN \exp_after:wN
+        \@@_split_function_auxi:w
           \cs_to_str:N ##1 \q_mark \c_true_bool
           #1 \q_mark \c_false_bool \q_stop
       }
@@ -2783,7 +2787,10 @@
 %   conditional processing since it may be an |\if...| type function!
 %    \begin{macrocode}
 \__kernel_patch:nnNNpn { }
-  { \__kernel_debug_log:x { Defining~\token_to_str:N #1~ \msg_line_context: } }
+  {
+    \__kernel_debug_log:x
+      { Defining~\token_to_str:N #1~ \msg_line_context: }
+  }
 \cs_set_protected:Npn \__kernel_chk_if_free_cs:N #1
   {
     \cs_if_free:NF #1
