--- a/l3kernel/l3box.dtx
+++ b/l3kernel/l3box.dtx
@@ -852,7 +852,12 @@
 %    \begin{macrocode}
 \cs_new_eq:NN \@@_dim_eval:w \etex_dimexpr:D
 \__kernel_patch_args:nNNpn
-  { { \__kernel_chk_expr:nNnN {#1} \@@_dim_eval:w { } \@@_dim_eval:n } }
+  {
+    {
+      \__kernel_chk_expr:nNnN {#1}
+        \@@_dim_eval:w { } \@@_dim_eval:n
+    }
+  }
 \cs_new:Npn \@@_dim_eval:n #1
   { \@@_dim_eval:w #1 \scan_stop: }
 %    \end{macrocode}
@@ -1214,7 +1219,10 @@
 %    \begin{macrocode}
 \__kernel_patch:nnNNpn { \__kernel_chk_var_local:N #1 } { }
 \cs_new_protected:Npn \hbox_set:Nn #1#2
-  { \tex_setbox:D #1 \tex_hbox:D { \color_group_begin: #2 \color_group_end: } }
+  {
+    \tex_setbox:D #1 \tex_hbox:D
+      { \color_group_begin: #2 \color_group_end: }
+  }
 \__kernel_patch:nnNNpn { \__kernel_chk_var_global:N #1 } { }
 \cs_new_protected:Npn \hbox_gset:Nn #1#2
   {
@@ -1320,7 +1328,10 @@
        { \color_group_begin: #2 \color_group_end: }
    }
 \cs_new_protected:Npn \hbox_to_zero:n #1
-  { \tex_hbox:D to \c_zero_dim { \color_group_begin: #1 \color_group_end: } }
+  {
+    \tex_hbox:D to \c_zero_dim
+      { \color_group_begin: #1 \color_group_end: }
+  }
 %    \end{macrocode}
 %  \end{macro}
 %  \end{macro}
