--- a/l3kernel/l3clist.dtx
+++ b/l3kernel/l3clist.dtx
@@ -995,7 +995,12 @@
       }
   }
 \cs_new:Npn \@@_set_from_seq:n #1
-  { , \@@_if_wrap:nTF {#1} { \exp_not:n { {#1} } } { \exp_not:n {#1} } }
+  {
+    ,
+    \@@_if_wrap:nTF {#1}
+      { \exp_not:n { {#1} } }
+      { \exp_not:n {#1} }
+  }
 \cs_generate_variant:Nn \clist_set_from_seq:NN  {     Nc }
 \cs_generate_variant:Nn \clist_set_from_seq:NN  { c , cc }
 \cs_generate_variant:Nn \clist_gset_from_seq:NN {     Nc }
