--- a/l3kernel/l3coffins.dtx
+++ b/l3kernel/l3coffins.dtx
@@ -818,7 +818,10 @@
       }
   }
 \cs_new_protected:Npn \@@_set_pole:Nnn #1#2#3
-  { \prop_put:cnn { l_@@_poles_ \@@_to_value:N #1 _prop } {#2} {#3} }
+  {
+    \prop_put:cnn { l_@@_poles_ \@@_to_value:N #1 _prop }
+      {#2} {#3}
+  }
 \cs_generate_variant:Nn \coffin_set_horizontal_pole:Nnn { c }
 \cs_generate_variant:Nn \coffin_set_vertical_pole:Nnn { c }
 \cs_generate_variant:Nn \@@_set_pole:Nnn { Nnx }
@@ -834,14 +837,24 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_update_corners:N #1
   {
-    \prop_put:cnx { l_@@_corners_ \@@_to_value:N #1 _prop } { tl }
+    \prop_put:cnx { l_@@_corners_ \@@_to_value:N #1 _prop }
+      { tl }
       { { 0pt } { \dim_eval:n { \box_ht:N #1 } } }
-    \prop_put:cnx { l_@@_corners_ \@@_to_value:N #1 _prop } { tr }
-      { { \dim_eval:n { \box_wd:N #1 } } { \dim_eval:n { \box_ht:N #1 } } }
-    \prop_put:cnx { l_@@_corners_ \@@_to_value:N #1 _prop } { bl }
+    \prop_put:cnx { l_@@_corners_ \@@_to_value:N #1 _prop }
+      { tr }
+      {
+        { \dim_eval:n { \box_wd:N #1 } }
+        { \dim_eval:n { \box_ht:N #1 } }
+      }
+    \prop_put:cnx { l_@@_corners_ \@@_to_value:N #1 _prop }
+      { bl }
       { { 0pt } { \dim_eval:n { -\box_dp:N #1 } } }
-    \prop_put:cnx { l_@@_corners_ \@@_to_value:N #1 _prop } { br }
-      { { \dim_eval:n { \box_wd:N #1 } } { \dim_eval:n { -\box_dp:N #1 } } }
+    \prop_put:cnx { l_@@_corners_ \@@_to_value:N #1 _prop }
+      { br }
+      {
+        { \dim_eval:n { \box_wd:N #1 } }
+        { \dim_eval:n { -\box_dp:N #1 } }
+      }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -1038,13 +1051,18 @@
                             \fp_to_dim:n
                               {
                                 (
-                                      \dim_to_fp:n {#1} * \l_@@_slope_x_fp
-                                  - ( \dim_to_fp:n {#5} * \l_@@_slope_y_fp )
+                                      \dim_to_fp:n {#1} *
+                                        \l_@@_slope_x_fp
+                                  - ( \dim_to_fp:n {#5} * 
+                                        \l_@@_slope_y_fp )
                                   -   \dim_to_fp:n {#2}
                                   +   \dim_to_fp:n {#6}
                                 )
                                 /
-                                ( \l_@@_slope_x_fp - \l_@@_slope_y_fp )
+                                (
+                                  \l_@@_slope_x_fp -
+                                  \l_@@_slope_y_fp
+                                )
                             }
                           }
                         \@@_calculate_intersection_aux:nnnnnN
@@ -1125,7 +1143,11 @@
 %    \begin{macrocode}
    \@@_reset_structure:N \l_@@_aligned_coffin
    \prop_clear:c
-     { l_@@_corners_ \@@_to_value:N \l_@@_aligned_coffin _ prop }
+     {
+       l_@@_corners_
+       \@@_to_value:N \l_@@_aligned_coffin
+       _prop
+     }
    \@@_update_poles:N \l_@@_aligned_coffin
 %    \end{macrocode}
 %   The structures of the parent coffins are now transferred to the new
@@ -1175,7 +1197,10 @@
     \box_set_wd:Nn \l_@@_aligned_coffin { \box_wd:N #1 }
     \@@_reset_structure:N \l_@@_aligned_coffin
     \prop_set_eq:cc
-      { l_@@_corners_ \@@_to_value:N \l_@@_aligned_coffin _prop }
+      {
+        l_@@_corners_
+        \@@_to_value:N \l_@@_aligned_coffin _prop
+      }
       { l_@@_corners_ \@@_to_value:N #1 _prop }
     \@@_update_poles:N  \l_@@_aligned_coffin
     \@@_offset_poles:Nnn #1 { 0pt } { 0pt }
@@ -1280,7 +1305,10 @@
 \cs_new_protected:Npn \@@_offset_corner:Nnnnn #1#2#3#4#5#6
   {
     \prop_put:cnx
-      { l_@@_corners_ \@@_to_value:N \l_@@_aligned_coffin _prop }
+      {
+        l_@@_corners_
+        \@@_to_value:N \l_@@_aligned_coffin _prop
+      }
       { #1 - #2 }
       {
         { \dim_eval:n { #3 + #5 } }
