--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -564,7 +564,10 @@
                      \exp_after:wN \use:n \current@color \c_space_tl 1
                    }
               }
-              { \exp_after:wN \@@_color_pickup:w \current@color \q_stop #1 }
+              {
+                \exp_after:wN \@@_color_pickup:w
+                  \current@color \q_stop #1
+              }
           }
         \cs_new_protected:Npn \@@_color_pickup:w #1 ~ #2 \q_stop #3
           { \tl_set:Nn #3 { #1 ~ #2 } }
@@ -711,7 +714,10 @@
        } 
   }
 \cs_new_protected:Npn \@@_color_cmyk:nnnn #1#2#3#4
-  { \@@_color_select:n { #1 ~ #2 ~ #3 ~ #4 ~ k ~ #1 ~ #2 ~ #3 ~ #4 ~ K } }
+  {
+    \@@_color_select:n
+      { #1 ~ #2 ~ #3 ~ #4 ~ k ~ #1 ~ #2 ~ #3 ~ #4 ~ K }
+  }
 \cs_new_protected:Npn \driver_color_gray:n #1
   { \exp_args:Nx \@@_color_gray:n { \fp_eval:n {#1} } }
 \cs_new_protected:Npn \@@_color_gray:n #1
@@ -830,7 +836,8 @@
     \@@_scope_begin:
     \@@_align_currentpoint_begin:
     \@@_literal_postscript:n { matrix~currentmatrix }
-    \@@_literal_postscript:n { Resolution~72~div~VResolution~72~div~scale }
+    \@@_literal_postscript:n
+      { Resolution~72~div~VResolution~72~div~scale }
     \@@_literal_postscript:n { DVImag~dup~scale }
     \@@_literal_postscript:x
       {
@@ -978,12 +985,18 @@
 \cs_new_protected:Npn \driver_draw_moveto:nn #1#2
   {
     \@@_draw_literal:x
-      { \dim_to_decimal_in_bp:n {#1} ~ \dim_to_decimal_in_bp:n {#2} ~ moveto }
+      {
+        \dim_to_decimal_in_bp:n {#1} ~ 
+        \dim_to_decimal_in_bp:n {#2} ~ moveto
+      }
   }
 \cs_new_protected:Npn \driver_draw_lineto:nn #1#2
   {
     \@@_draw_literal:x
-      { \dim_to_decimal_in_bp:n {#1} ~ \dim_to_decimal_in_bp:n {#2} ~ lineto }
+      {
+        \dim_to_decimal_in_bp:n {#1} ~
+        \dim_to_decimal_in_bp:n {#2} ~ lineto
+      }
   }
 \cs_new_protected:Npn \driver_draw_rectangle:nnnn #1#2#3#4
   {
@@ -1320,7 +1333,7 @@
 %    \end{macrocode}
 %
 % The direct PDF driver covers both \pdfTeX{} and \LuaTeX{}. The latter
-% renames/restructures the driver primitives but this can be handled
+% renames and restructures the driver primitives but this can be handled
 % at one level of abstraction. As such, we avoid using two separate drivers
 % for this material at the cost of some \texttt{x}-type definitions to get
 % everything expanded up-front.
@@ -2472,7 +2485,8 @@
       }
     \@@_scope_begin:x
       {
-        clip-path = "url ( \c_hash_str l3cp \int_use:N \g_@@_clip_path_int ) "
+        clip-path =
+          "url ( \c_hash_str l3cp \int_use:N \g_@@_clip_path_int ) "
       }
     \@@_scope_begin:n
       {
@@ -2572,7 +2586,8 @@
        }
   }
 \cs_new_eq:NN \@@_image_include_jpg:n \@@_image_include_png:n
-\cs_new:Npn \@@_image_include_bitmap_quote:w #1 " #2 " #3 \q_stop { #1#2 }
+\cs_new:Npn \@@_image_include_bitmap_quote:w #1 " #2 " #3 \q_stop
+  { #1#2 }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
