--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -1336,7 +1336,8 @@
   {
     \tl_set:Nx \l_@@_one_indent_tl
       { \exp_args:No \__kernel_str_to_other_fast:n { \tl_to_str:n {#1} } }
-    \int_set:Nn \l_@@_one_indent_int { \str_count:N \l_@@_one_indent_tl }
+    \int_set:Nn \l_@@_one_indent_int
+      { \str_count:N \l_@@_one_indent_tl }
     \exp_last_unbraced:NNo
       \cs_set:Npn \@@_unindent:w \l_@@_one_indent_tl { }
   }
@@ -1915,7 +1916,8 @@
     {
       \tl_if_blank:nTF {#1}
         {
-          \cs_set:Npn \@@_tmp:w ##1 " ##2 " ##3 \q_stop { { } {##2} {  } }
+          \cs_set:Npn \@@_tmp:w ##1 " ##2 " ##3 \q_stop
+            { { } {##2} {  } }
           \seq_gput_right:Nx \g_@@_stack_seq
             {
               \exp_after:wN \@@_tmp:w \tex_jobname:D
@@ -2212,7 +2214,8 @@
     \exp_after:wN \@@_parse_full_name_auxi:w
       \tl_to_str:n { #1 " #1 " } \q_stop #2#3#4
   }
-\cs_new_protected:Npn \@@_parse_full_name_auxi:w #1 " #2 " #3 \q_stop #4#5#6
+\cs_new_protected:Npn \@@_parse_full_name_auxi:w
+  #1 " #2 " #3 \q_stop #4#5#6
   {
     \@@_parse_full_name_split:nNNNTF {#2} / #4 #5
       { \str_if_empty:NT #4 { \str_set:Nn #4 { / } } }
@@ -2272,7 +2275,8 @@
     \seq_concat:NNN \l_@@_tmp_seq \l_@@_tmp_seq \g_@@_record_seq
     \seq_remove_duplicates:N \l_@@_tmp_seq
     #1 { LaTeX/kernel } { file-list }
-      { \seq_map_function:NN \l_@@_tmp_seq \@@_list_aux:n } { } { } { }
+      { \seq_map_function:NN \l_@@_tmp_seq \@@_list_aux:n }
+        { } { } { }
   }
 \cs_new:Npn \@@_list_aux:n #1 { \iow_newline: #1 }
 %    \end{macrocode}
@@ -2289,7 +2293,10 @@
   {
     \exp_args:NNx \seq_set_from_clist:Nn \l_@@_tmp_seq
       { \tl_to_str:N \@filelist }
-    \seq_gconcat:NNN \g_@@_record_seq \g_@@_record_seq \l_@@_tmp_seq
+    \seq_gconcat:NNN
+      \g_@@_record_seq
+      \g_@@_record_seq
+      \l_@@_tmp_seq
   }
 %</package>
 %    \end{macrocode}
