--- a/l3kernel/l3fp-aux.dtx
+++ b/l3kernel/l3fp-aux.dtx
@@ -656,7 +656,8 @@
 %    \begin{macrocode}
 \cs_new:Npn \@@_exp_after_tuple_o:w
   { \@@_exp_after_tuple_f:nw { \exp_after:wN \exp_stop_f: } }
-\cs_new:Npn \@@_exp_after_tuple_f:nw #1 \s_@@_tuple \@@_tuple_chk:w #2 ;
+\cs_new:Npn \@@_exp_after_tuple_f:nw
+  #1 \s_@@_tuple \@@_tuple_chk:w #2 ;
   {
     \exp_after:wN \s_@@_tuple
     \exp_after:wN \@@_tuple_chk:w
@@ -1269,10 +1270,14 @@
 %   This is used in error messages hence does not need to be fast.
 %    \begin{macrocode}
 \cs_new:Npn \@@_func_to_name:N #1
-  { \exp_last_unbraced:Nf \@@_func_to_name_aux:w { \cs_to_str:N #1 } X }
+  {
+    \exp_last_unbraced:Nf
+      \@@_func_to_name_aux:w { \cs_to_str:N #1 } X
+  }
 \cs_set_protected:Npn \@@_tmp:w #1 #2
   { \cs_new:Npn \@@_func_to_name_aux:w ##1 #1 ##2 #2 ##3 X {##2} }
-\exp_args:Nff \@@_tmp:w { \tl_to_str:n { @@_ } } { \tl_to_str:n { _o: } }
+\exp_args:Nff \@@_tmp:w { \tl_to_str:n { @@_ } }
+  { \tl_to_str:n { _o: } }
 %    \end{macrocode}
 % \end{macro}
 %
