--- a/l3kernel/l3fp-random.dtx
+++ b/l3kernel/l3fp-random.dtx
@@ -291,7 +291,10 @@
         \exp:w \exp_end_continue_f:w
           \fp_compare:nNnTF { #1 ; } < \c_@@_rand_size_int
             { \fp_to_int:n { #1 ; + 1 } ; \@@_randint_narrow_e:nnnn }
-            { \fp_to_int:n { floor(#1 ; * 1e-8 + 1) } ; \@@_randint_wide_e:nnnn }
+            {
+              \fp_to_int:n { floor(#1 ; * 1e-8 + 1) } ;
+              \@@_randint_wide_e:nnnn
+            }
       }
     \cs_new:Npn \@@_randint_e:wwNnn #1 ; #2 ;
       {
