--- a/l3kernel/l3kernel-functions.dtx
+++ b/l3kernel/l3kernel-functions.dtx
@@ -119,7 +119,8 @@
 %     \cs{__kernel_chk_var_local:N} \meta{var}
 %     \cs{__kernel_chk_var_global:N} \meta{var}
 %   \end{syntax}
-%   Applies \cs{__kernel_chk_var_exist:N} \meta{var}, then
+%   Applies \cs{__kernel_chk_var_exist:N} \meta{var}, and assuming that is
+%   true applies
 %   \cs{__kernel_chk_var_scope:NN} \meta{scope} \meta{var}, where
 %   \meta{scope} is |l| or~|g|.
 % \end{function}
