--- a/l3kernel/l3prg.dtx
+++ b/l3kernel/l3prg.dtx
@@ -1456,7 +1456,8 @@
 \cs_new:cpn { @@_replicate_first_6:n } #1 { \exp_end: #1#1#1#1#1#1 }
 \cs_new:cpn { @@_replicate_first_7:n } #1 { \exp_end: #1#1#1#1#1#1#1 }
 \cs_new:cpn { @@_replicate_first_8:n } #1 { \exp_end: #1#1#1#1#1#1#1#1 }
-\cs_new:cpn { @@_replicate_first_9:n } #1 { \exp_end: #1#1#1#1#1#1#1#1#1 }
+\cs_new:cpn { @@_replicate_first_9:n } #1
+  { \exp_end: #1#1#1#1#1#1#1#1#1 }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
