--- a/l3kernel/l3tl-analysis.dtx
+++ b/l3kernel/l3tl-analysis.dtx
@@ -636,7 +636,8 @@
       \tex_advance:D \l_@@_analysis_type_int \l_@@_analysis_type_int
     \fi:
     \tex_skip:D \l_@@_analysis_index_int
-      = \l_@@_analysis_normal_int sp plus \l_@@_analysis_type_int sp \scan_stop:
+      = \l_@@_analysis_normal_int sp 
+         plus \l_@@_analysis_type_int sp \scan_stop:
     \int_incr:N \l_@@_analysis_index_int
     \int_zero:N \l_@@_analysis_normal_int
     \if_int_compare:w \l_@@_analysis_nesting_int = -1 \exp_stop_f:
@@ -780,10 +781,14 @@
       \token_to_str:N C \exp_not:N \else:
     \exp_not:N \if_catcode:w #1 \c_catcode_letter_token
       \token_to_str:N B \exp_not:N \else:
-    \exp_not:N \if_catcode:w #1 \c_math_toggle_token      3 \exp_not:N \else:
-    \exp_not:N \if_catcode:w #1 \c_alignment_token        4 \exp_not:N \else:
-    \exp_not:N \if_catcode:w #1 \c_math_superscript_token 7 \exp_not:N \else:
-    \exp_not:N \if_catcode:w #1 \c_math_subscript_token   8 \exp_not:N \else:
+    \exp_not:N \if_catcode:w #1 \c_math_toggle_token      3
+      \exp_not:N \else:
+    \exp_not:N \if_catcode:w #1 \c_alignment_token        4
+      \exp_not:N \else:
+    \exp_not:N \if_catcode:w #1 \c_math_superscript_token 7
+      \exp_not:N \else:
+    \exp_not:N \if_catcode:w #1 \c_math_subscript_token   8
+      \exp_not:N \else:
     \exp_not:N \if_catcode:w #1 \c_space_token
       \token_to_str:N A \exp_not:N \else:
       6
@@ -916,7 +921,8 @@
     \exp_after:wN #1
       \g_@@_analysis_result_tl
       \s_@@ { ? \tl_map_break: } \s_@@
-    \prg_break_point:Nn \tl_map_break: { \int_gdecr:N \g__kernel_prg_map_int }
+    \prg_break_point:Nn \tl_map_break:
+      { \int_gdecr:N \g__kernel_prg_map_int }
   }
 %    \end{macrocode}
 % \end{macro}
