--- a/l3kernel/l3expan.dtx
+++ b/l3kernel/l3expan.dtx
@@ -1897,7 +1897,8 @@
         #5
       }
   }
-\cs_new:Npn \@@_generate_variant_loop_special:NNwNNnn #1#2#3 \q_stop #4#5#6#7
+\cs_new:Npn \@@_generate_variant_loop_special:NNwNNnn
+  #1#2#3 \q_stop #4#5#6#7
   {
     #3 \q_stop #4 #5 {#6} {#7}
     \exp_not:n
