Lua function is internal [ci skip]
l3doc can't pick this up.

--- a/l3kernel/l3luatex.dtx
+++ b/l3kernel/l3luatex.dtx
@@ -320,7 +320,7 @@ local write      = tex.write
 local utf8_char  = unicode.utf8.char
 %    \end{macrocode}
 %
-% \begin{macro}{escapehex}
+% \begin{macro}[int]{escapehex}
 %   An internal auxiliary to convert a string to the matching hex escape.
 %   This works on a byte basis: extension to handled UTF-8 input is
 %   covered in \pkg{pdftexcmds} but is not currently required here.
