Document l3kernel Lua table [ci skip]

--- a/l3kernel/l3luatex.dtx
+++ b/l3kernel/l3luatex.dtx
@@ -126,7 +126,12 @@
 % \subsection{Lua interfaces}
 %
 % As well as interfaces for \TeX{}, there are a small number of Lua functions
-% provided here. Currently these are intended for internal use only.
+% provided here.
+%
+% \begin{function}{l3kernel}
+%   All public interfaces provided by the module are stored within the
+%   |l3kernel| table.
+% \end{function}
 %
 % \begin{function}{l3kernel.charcat}
 %   \begin{syntax}
