Use "noTF" mark-up for regex functions [ci skip]
This allows proper linking of the versions without TF.

--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -554,7 +554,7 @@
 %
 % \subsection{Submatch extraction}
 %
-% \begin{function}[TF, added = 2017-05-26]
+% \begin{function}[noTF, added = 2017-05-26]
 %   {\regex_extract_once:nnN, \regex_extract_once:NnN}
 %   \begin{syntax}
 %     \cs{regex_extract_once:nnN} \Arg{regex} \Arg{token list} \meta{seq~var}
@@ -585,7 +585,7 @@
 %   functions such as \cs{regex_replace_once:nnN}.
 % \end{function}
 %
-% \begin{function}[TF, added = 2017-05-26]
+% \begin{function}[noTF, added = 2017-05-26]
 %   {\regex_extract_all:nnN, \regex_extract_all:NnN}
 %   \begin{syntax}
 %     \cs{regex_extract_all:nnN} \Arg{regex} \Arg{token list} \meta{seq~var}
@@ -609,7 +609,7 @@
 %   and the \texttt{true} branch is left in the input stream.
 % \end{function}
 %
-% \begin{function}[TF, added = 2017-05-26]{\regex_split:nnN, \regex_split:NnN}
+% \begin{function}[noTF, added = 2017-05-26]{\regex_split:nnN, \regex_split:NnN}
 %   \begin{syntax}
 %     \cs{regex_split:nnN} \Arg{regular expression} \Arg{token list} \meta{seq~var}
 %     \cs{regex_split:nnNTF} \Arg{regular expression} \Arg{token list} \meta{seq~var} \Arg{true code} \Arg{false code}
@@ -637,7 +637,7 @@
 %
 % \subsection{Replacement}
 %
-% \begin{function}[TF, added = 2017-05-26]
+% \begin{function}[noTF, added = 2017-05-26]
 %   {\regex_replace_once:nnN,\regex_replace_once:NnN}
 %   \begin{syntax}
 %     \cs{regex_replace_once:nnN} \Arg{regular expression} \Arg{replacement} \meta{tl~var}
@@ -650,7 +650,7 @@
 %   first capturing group, |\2| of the second, \emph{etc.}
 % \end{function}
 %
-% \begin{function}[TF, added = 2017-05-26]
+% \begin{function}[noTF, added = 2017-05-26]
 %   {\regex_replace_all:nnN, \regex_replace_all:NnN}
 %   \begin{syntax}
 %     \cs{regex_replace_all:nnN} \Arg{regular expression} \Arg{replacement} \meta{tl~var}
@@ -5825,15 +5825,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}
-%   {
-%     \regex_extract_once:nnN, \regex_extract_once:NnN,
-%     \regex_extract_all:nnN,  \regex_extract_all:NnN,
-%     \regex_replace_once:nnN, \regex_replace_once:NnN,
-%     \regex_replace_all:nnN,  \regex_replace_all:NnN,
-%     \regex_split:nnN,        \regex_split:NnN
-%   }
-% \begin{macro}[TF]
+% \begin{macro}[noTF]
 %   {
 %     \regex_extract_once:nnN, \regex_extract_once:NnN,
 %     \regex_extract_all:nnN,  \regex_extract_all:NnN,
@@ -5868,7 +5860,6 @@
   \regex_replace_all:nnN \regex_replace_all:NnN
 \@@_tmp:w \@@_split:nnN \regex_split:nnN \regex_split:NnN
 %    \end{macrocode}
-% \end{macro}
 % \end{macro}
 %
 % \subsubsection{Variables and helpers for user functions}
