Note that pTeX and upTeX now have random numbers [ci skip]

--- a/l3kernel/l3fp.dtx
+++ b/l3kernel/l3fp.dtx
@@ -1258,8 +1258,8 @@
 %     \cs{fp_eval:n} \{ |rand()| \}
 %   \end{syntax}
 %   Produces a pseudo-random floating-point number (multiple of
-%   $10^{-16}$) between $0$~included and $1$~excluded.  Unavailable in
-%   the \XeTeX{} engine.
+%   $10^{-16}$) between $0$~included and $1$~excluded.  This is not yet
+%   available in \XeTeX{}.
 %   \begin{texnote}
 %     This is based on pseudo-random numbers provided by the engine's
 %     primitive \tn{pdfuniformdeviate} in \pdfTeX{} and
