Rename kernel conditional to have the word "if"

--- a/l3kernel/l3kernel-functions.dtx
+++ b/l3kernel/l3kernel-functions.dtx
@@ -136,9 +136,9 @@
 %   the \meta{follow-on}.
 % \end{function}
 %
-% \begin{function}{\__kernel_debug:TF}
+% \begin{function}{\__kernel_if_debug:TF}
 %   \begin{syntax}
-%     \cs{__kernel_debug:TF} \Arg{true code} \Arg{false code}
+%     \cs{__kernel_if_debug:TF} \Arg{true code} \Arg{false code}
 %   \end{syntax}
 %   Runs the \meta{true code} if debugging is enabled, namely only in
 %   \LaTeXe{} package mode with one of the options
