--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -1822,7 +1822,7 @@
 % In format mode the error is somewhat different.
 %    \begin{macrocode}
 %<*package>
-\__kernel_debug:TF
+\__kernel_if_debug:TF
   {
     \__kernel_msg_new:nnnn { kernel } { debug }
       { The~debugging~option~'#1'~does~not~exist~\msg_line_context:. }
