--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -6644,7 +6644,7 @@
 %   typically~1.  If the module's current tracing level is less than
 %   |#2| show nothing, otherwise write |#3| to the terminal.
 %    \begin{macrocode}
-\__kernel_debug:TF
+\__kernel_if_debug:TF
   {
     \cs_new_protected:Npn \@@_trace_push:nnN #1#2#3
       { \@@_trace:nnx {#1} {#2} { entering~ \token_to_str:N #3 } }
@@ -6673,7 +6673,7 @@
 %   stored in \tn{toks} from $0$ to \cs{l_@@_max_state_int}
 %   (excluded).
 %    \begin{macrocode}
-\__kernel_debug:TF
+\__kernel_if_debug:TF
   {
     \cs_new_protected:Npn \@@_trace_states:n #1
       {
