--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -1179,7 +1179,7 @@
 %   For setting token list variables equal to each other.  When checking
 %   is turned on, make sure both variables exist.
 %    \begin{macrocode}
-\__kernel_debug:TF
+\__kernel_if_debug:TF
   {
     \cs_new_protected:Npn \tl_set_eq:NN #1#2
       {
