Move l3sys earlier to use sys_if_engine conditionals as appropriate

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -1959,7 +1959,7 @@
           { \l_@@_full_name_str }
       }
   }
-\cs_if_exist:NTF \luatex_directlua:D
+\sys_if_engine_luatex:TF
   {
     \cs_set_protected:Npn \@@_get_details:nnN #1#2#3
       {
@@ -1984,7 +1984,7 @@
               { \l_@@_full_name_str }
           }
       }
-    \cs_if_exist:NT \xetex_XeTeXversion:D
+    \sys_if_engine_xetex:T
       {
         \cs_set_protected:Npn \@@_get_details:nnN #1#2#3
           {
