--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -1018,12 +1018,10 @@
 \int_const:Nn \c_log_iow  { -1 }
 \int_const:Nn \c_term_iow
   {
-    \cs_if_exist:NTF \luatex_directlua:D
-      {
-        \int_compare:nNnTF \luatex_luatexversion:D > { 80 }
-          { 128 }
-          { 16 }
-      }
+    \bool_lazy_and:nnTF
+      { \sys_if_engine_luatex_p: }
+      { \int_compare_p:nNn \luatex_luatexversion:D > { 80 } }
+      { 128 }
       { 16 }
   }
 %    \end{macrocode}
