Condense l3sys further

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2449,15 +2449,8 @@
 % \begin{macro}[EXP, pTF]{\sys_if_rand_exist:}
 %   Currently, randomness exists under \pdfTeX{}, \LuaTeX{}, \pTeX{} and \upTeX{}.
 %    \begin{macrocode}
-\cs_if_exist:NTF \pdftex_uniformdeviate:D
-  {
-    \prg_new_conditional:Npnn \sys_if_rand_exist: { p , T , F , TF }
-      { \prg_return_true: }
-  }
-  {
-    \prg_new_conditional:Npnn \sys_if_rand_exist: { p , T , F , TF }
-      { \prg_return_false: }
-  }
+\@@_const:nn { sys_if_rand_exist }
+  { \cs_if_exist_p:N \pdftex_uniformdeviate:D }
 %    \end{macrocode}
 % \end{macro}
 %
