Condense \sys_if_shell code

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2490,52 +2490,18 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{macro}[EXP, pTF]{\sys_if_shell:}
-%   Performs a check for whether shell escape is enabled.  This
-%   returns true if either of restricted or unrestricted shell escape
-%   is enabled.
+% \begin{macro}[EXP, pTF]{\sys_if_shell:, \sys_if_shell_unrestricted:, \sys_if_shell_restricted:}
+%   Performs a check for whether shell escape is enabled.  The first set
+%   of functions returns true if either of restricted or unrestricted
+%   shell escape is enabled, while the other two sets of functions
+%   return true in only one of these two cases.
 %    \begin{macrocode}
-\prg_new_conditional:Nnn \sys_if_shell: { p , T , F , TF }
-  {
-    \if_int_compare:w \c_sys_shell_escape_int = 0 ~
-      \prg_return_false:
-    \else:
-      \prg_return_true:
-    \fi:
-  }
-%    \end{macrocode}
-% \end{macro}
-%
-% \begin{macro}[EXP, pTF]{\sys_if_shell_unrestricted:}
-%   Performs a check for whether \emph{unrestricted} shell escape is
-%   enabled.
-%    \begin{macrocode}
-\prg_new_conditional:Nnn \sys_if_shell_unrestricted: { p , T , F , TF }
-  {
-    \if_int_compare:w \c_sys_shell_escape_int = 1 ~
-      \prg_return_true:
-    \else:
-      \prg_return_false:
-    \fi:
-  }
-%    \end{macrocode}
-% \end{macro}
-%
-% \begin{macro}[EXP, pTF]{\sys_if_shell_restricted:}
-%   Performs a check for whether \emph{restricted} shell escape is
-%   enabled.  This returns false if unrestricted shell escape is
-%   enabled.  Unrestricted shell escape is not considered a superset
-%   of restricted shell escape in this case.  To find whether any
-%   shell escape is enabled use \cs{sys_if_shell:}.
-%    \begin{macrocode}
-\prg_new_conditional:Nnn \sys_if_shell_restricted: { p , T , F , TF }
-  {
-    \if_int_compare:w \c_sys_shell_escape_int = 2 \exp_stop_f:
-      \prg_return_true:
-    \else:
-      \prg_return_false:
-    \fi:
-  }
+\@@_const:nn { sys_if_shell }
+  { \int_compare_p:nNn \c_sys_shell_escape_int > 0 }
+\@@_const:nn { sys_if_shell_unrestricted }
+  { \int_compare_p:nNn \c_sys_shell_escape_int = 1 }
+\@@_const:nn { sys_if_shell_restricted }
+  { \int_compare_p:nNn \c_sys_shell_escape_int = 2 }
 %    \end{macrocode}
 % \end{macro}
 %
