--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2204,25 +2204,23 @@
 %
 % \begin{macro}[rEXP]{\prop_map_tokens:Nn, \prop_map_tokens:cn}
 % \begin{macro}{\@@_map_tokens:nwwn}
-%   The mapping is very similar to \cs{prop_map_function:NN}.  It grabs
-%   one key--value pair at a time, and stops when reaching the marker
-%   key \cs{q_recursion_tail}, which cannot appear in normal keys since
-%   those are strings.  The odd construction |\use:n {#1}| allows |#1|
-%   to contain any token without interfering with \cs{prop_map_break:}.
-%   Argument |#2| of \cs{@@_map_tokens:nwwn} is \cs{s_@@} the first
-%   time, and is otherwise empty.
+%   The mapping is very similar to \cs{prop_map_function:NN}.  The
+%   \cs{use_i:nn} removes the leading \cs{s_@@}.  The odd construction
+%   |\use:n {#1}| allows |#1| to contain any token without interfering
+%   with \cs{prop_map_break:}.  The loop stops when the argument
+%   delimited by \cs{@@_pair:wn} is \cs{prg_break:} instead of being
+%   empty.
 %    \begin{macrocode}
 \cs_new:Npn \prop_map_tokens:Nn #1#2
   {
-    \exp_last_unbraced:Nno \@@_map_tokens:nwwn {#2} #1
-      \@@_pair:wn \q_recursion_tail \s_@@ { }
+    \exp_last_unbraced:Nno
+      \use_i:nn { \@@_map_tokens:nwwn {#2} } #1
+      \prg_break: \@@_pair:wn \s_@@ { } \prg_break_point:
     \prg_break_point:Nn \prop_map_break: { }
   }
 \cs_new:Npn \@@_map_tokens:nwwn #1#2 \@@_pair:wn #3 \s_@@ #4
   {
-    \if_meaning:w \q_recursion_tail #3
-      \exp_after:wN \prop_map_break:
-    \fi:
+    #2
     \use:n {#1} {#3} {#4}
     \@@_map_tokens:nwwn {#1}
   }
