Clarify that we have an interface to set/get random seed [ci skip]

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -700,13 +700,18 @@
 %   \begin{syntax}
 %     \cs{sys_gset_rand_seed:n} \Arg{intexpr}
 %   \end{syntax}
-%   Globally sets the seed for the engine's pseudo-random number generator
-%   to the \meta{integer expression}.  This random
-%   seed affects all \cs[no-index]{\ldots{}_rand} functions (such as
+%   Globally sets the seed for the engine's pseudo-random number
+%   generator to the \meta{integer expression}.  This random seed
+%   affects all \cs[no-index]{\ldots{}_rand} functions (such as
 %   \cs{int_rand:nn} or \cs{clist_rand_item:n}) as well as other
-%   packages relying on the engine's random number generator.  Currently
-%   only the absolute value of the seed is used.  In engines without
-%   random number support this produces an error.
+%   packages relying on the engine's random number generator.  In
+%   engines without random number support this produces an error.
+%   \begin{texnote}
+%     While a $32$-bit (signed) integer can be given as a seed, only the
+%     absolute value is used and any number beyond $2^{28}$ is divided
+%     by an appropriate power of~$2$.  We recommend using an integer in
+%     $[0,2^{28}-1]$.
+%   \end{texnote}
 % \end{function}
 %
 % \begin{variable}[added = 2017-05-27]{\c_sys_shell_escape_int}
