--- a/l3kernel/l3kernel-functions.dtx
+++ b/l3kernel/l3kernel-functions.dtx
@@ -168,6 +168,12 @@
 %   \emph{i.e.}~allow it to be generated in some way.
 % \end{function}
 %
+% \begin{variable}{\l__kernel_expl_bool}
+%   A boolean which records the current code syntax status: \texttt{true} if
+%   currently inside a code environment. This variable should only be
+%   set by \cs{ExplSyntaxOn}/\cs{ExplSyntaxOff}.
+% \end{variable}
+%
 % \begin{function}{\__kernel_file_missing:n}
 %   \begin{syntax}
 %     \cs{__kernel_file_missing:n} \Arg{name}
@@ -412,6 +418,16 @@
 %   A combination of \cs{__kernel_patch:nnNNpn} and
 %   \cs{__kernel_patch_args:nNNpn}.
 % \end{function}
+%
+% \begin{variable}{\g__kernel_prg_map_int}
+%   This integer is used by non-expandable mapping functions to track
+%   the level of nesting in force.  The functions
+%   \cs[no-index]{\meta{type}_map_1:w},
+%   \cs[no-index]{\meta{type}_map_2:w}, \emph{etc.}, labelled by
+%   \cs{g__kernel_prg_map_int}
+%   hold functions to be mapped over various list datatypes in inline
+%   and variable mappings.
+% \end{variable}
 %
 % \begin{function}{\__kernel_register_show:N, \__kernel_register_show:c}
 %   \begin{syntax}
