Clean up sectioning in l3kernel [ci skip]

--- a/l3kernel/l3quark.dtx
+++ b/l3kernel/l3quark.dtx
@@ -47,13 +47,11 @@
 %
 % \begin{documentation}
 %
-% \section{Introduction to quarks and scan marks}
-%
 % Two special types of constants in \LaTeX3 are \enquote{quarks} and
 % \enquote{scan marks}. By convention all constants of type quark
 % start out with |\q_|, and scan marks start with |\s_|.
 %
-% \subsection{Quarks}
+% \section{Quarks}
 %
 % Quarks are control sequences that expand to themselves and should
 % therefore \emph{never} be executed directly in the code.
