Clarify documentation of c-type and v-type arguments (fixes #457)

--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -575,11 +575,11 @@
 % arguments before passing it to the base function:
 % \begin{description}
 %   \item[c] Character string used as a command name.\\ The argument (a
-%     token or braced token list) must, when fully expanded, produce a
-%     sequence of characters which is then used to construct a command
-%     name (\emph{via}~\tn{csname} \ldots \tn{endcsname}).
-%     This command name is the
-%     single token that is passed to the function as the argument. Hence
+%     token or braced token list) is \emph{fully expanded}; the result
+%     must be a sequence of characters which is then used to construct a
+%     command name (\emph{via}~\tn{csname} \ldots \tn{endcsname}).  This
+%     command name is a single token that is passed to the function as
+%     the argument. Hence
 %     \begin{quote}
 %       \cs{seq_gpush:cV} |{ g_file_name_seq }| \cs{l_tmpa_tl}
 %     \end{quote}
@@ -587,8 +587,7 @@
 %     \begin{quote}
 %       \cs{seq_gpush:NV} |\g_file_name_seq| \cs{l_tmpa_tl}.
 %     \end{quote}
-%     Remember that \texttt{c} arguments are \emph{fully expanded} by
-%     \TeX{} when creating csnames. This means that (a) the entire
+%     Full expansion means that (a) the entire
 %     argument must be expandable and (b) any variables are
 %     converted to their content. So the preceding examples are also
 %     equivalent to
