Document that \token_to_str:N and \token_to_meaning:N apply to braces too

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -673,6 +673,8 @@
 %   control sequence. For a macro, this includes the \meta{replacement text}.
 %   \begin{texnote}
 %     This is \TeX{}'s \tn{meaning} primitive.
+%     For tokens that are not control sequences, it is more logical to
+%     use \cs{token_to_meaning:N}.
 %     The \texttt{c} variant correctly reports undefined arguments.
 %   \end{texnote}
 % \end{function}
