--- a/l3kernel/l3int.dtx
+++ b/l3kernel/l3int.dtx
@@ -1797,7 +1797,7 @@
 % \subsection{Integer step functions}
 %
 % \begin{macro}{\int_step_function:nnnN}
-% \begin{macro}{\@@_step:wwwN, \@@_step:NnnnN}
+% \begin{macro}{\@@_step:wwwN, \@@_step:NwnnN}
 % \begin{macro}{\int_step_function:nN}
 % \begin{macro}{\int_step_function:nnN}
 %   Before all else, evaluate the initial value, step, and final value.
@@ -1832,26 +1832,28 @@
 \cs_new:Npn \@@_step:wwwN #1; #2; #3; #4
   {
     \int_compare:nNnTF {#2} > \c_zero
-      { \@@_step:NnnnN > }
+      { \@@_step:NwnnN > }
       {
         \int_compare:nNnTF {#2} = \c_zero
           {
             \__kernel_msg_expandable_error:nnn
               { kernel } { zero-step } {#4}
-            \use_none:nnnn
+            \prg_break:
           }
-          { \@@_step:NnnnN < }
+          { \@@_step:NwnnN < }
       }
-      {#1} {#2} {#3} #4
+      #1 ; {#2} {#3} #4
+    \prg_break_point:
   }
-\cs_new:Npn \@@_step:NnnnN #1#2#3#4#5
+\cs_new:Npn \@@_step:NwnnN #1#2 ; #3#4#5
   {
-    \int_compare:nNnF {#2} #1 {#4}
-      {
-        #5 {#2}
-        \exp_args:NNf \@@_step:NnnnN
-          #1 { \int_eval:n { #2 + #3 } } {#3} {#4} #5
-      }
+    \if_int_compare:w #2 #1 #4 \exp_stop_f:
+      \prg_break:n
+    \fi:
+    #5 {#2}
+    \exp_after:wN \@@_step:NwnnN
+    \exp_after:wN #1
+    \int_value:w \@@_eval:w #2 + #3 ; {#3} {#4} #5
   }
 \cs_new:Npn \int_step_function:nN
   { \int_step_function:nnnN { 1 } { 1 } }
