Make \infty and \pi into errors in fp expressions (fixes #357)
I couldn't find a good way to distinguish them so I took a bad way:
systematically compare every register that comes into fp expressions
with \infty and with \pi.

--- a/l3kernel/l3fp-parse.dtx
+++ b/l3kernel/l3fp-parse.dtx
@@ -831,8 +831,6 @@
 %     \@@_parse_one_register_int:www,
 %     \@@_parse_one_register_mu:www,
 %     \@@_parse_one_register_dim:ww,
-%     \@@_parse_one_register_wd:w,
-%     \@@_parse_one_register_wd:Nw,
 %   }
 %   This is called whenever~|#2| is a control sequence other than
 %   \cs{scan_stop:} in meaning.  We special-case \tn{wd}, \tn{ht}, \tn{dp}
@@ -856,9 +854,7 @@
     \exp_after:wN \@@_parse_infix_after_operand:NwN
     \exp_after:wN #1
     \exp:w \exp_end_continue_f:w
-      \if_meaning:w \box_wd:N #2 \@@_parse_one_register_wd:w \fi:
-      \if_meaning:w \box_ht:N #2 \@@_parse_one_register_wd:w \fi:
-      \if_meaning:w \box_dp:N #2 \@@_parse_one_register_wd:w \fi:
+      \@@_parse_one_register_special:N #2
       \exp_after:wN \@@_parse_one_register_aux:Nw
       \exp_after:wN #2
       \int_value:w
@@ -895,12 +891,45 @@
     \int_value:w \dim_to_decimal_in_sp:n { #1 pt } ;
   }
 %    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}
+%   {
+%     \@@_parse_one_register_special:N,
+%     \@@_parse_one_register_math:NNw,
+%     \@@_parse_one_register_wd:w,
+%     \@@_parse_one_register_wd:Nw
+%   }
 %   The \tn{wd}, \tn{dp}, \tn{ht} primitives expect an integer argument.
 %   We abuse the exponent parser to find the integer argument: simply
 %   include the exponent marker~|e|.  Once that \enquote{exponent} is
 %   found, use \cs{tex_the:D} to find the box dimension and then copy
 %   what we did for dimensions.
 %    \begin{macrocode}
+\cs_new:Npn \@@_parse_one_register_special:N #1
+  {
+    \if_meaning:w \box_wd:N #1 \@@_parse_one_register_wd:w \fi:
+    \if_meaning:w \box_ht:N #1 \@@_parse_one_register_wd:w \fi:
+    \if_meaning:w \box_dp:N #1 \@@_parse_one_register_wd:w \fi:
+    \if_meaning:w \infty #1
+      \@@_parse_one_register_math:NNw \infty #1
+    \fi:
+    \if_meaning:w \pi #1
+      \@@_parse_one_register_math:NNw \pi #1
+    \fi:
+  }
+\cs_new:Npn \@@_parse_one_register_math:NNw
+    #1#2#3#4 \@@_parse_expand:w
+  {
+    #3
+    \str_if_eq:nnTF {#1} {#2}
+      {
+        \__kernel_msg_expandable_error:nnn
+          { kernel } { fp-infty-pi } {#1}
+        \c_nan_fp
+      }
+      { #4 \@@_parse_expand:w }
+  }
 \cs_new:Npn \@@_parse_one_register_wd:w
     #1#2 \exp_after:wN #3#4 \@@_parse_expand:w
   {
@@ -2921,6 +2950,8 @@
   { #1~expects~between~#2~and~#3~arguments. }
 \__kernel_msg_new:nnn { kernel } { fp-bad-args }
   { Arguments~in~#1#2~are~invalid. }
+\__kernel_msg_new:nnn { kernel } { fp-infty-pi }
+  { Math~command~#1 is~not~an~fp }
 %<*package>
 \cs_if_exist:cT { @unexpandable@protect }
   {
