--- a/l3kernel/l3fp.dtx
+++ b/l3kernel/l3fp.dtx
@@ -828,6 +828,11 @@
 %     preceded by any sign, but that sign is ignored.
 %   \item Any unrecognizable string triggers an error, and produces a
 %     \nan{}.
+%   \item Note that commands such as \tn{infty}, \tn{pi}, or \tn{sin}
+%     \emph{do not} work in floating point expressions.  They may
+%     silently be interpreted as completely unexpected numbers, because
+%     integer constants (allowed in expressions) are commonly stored as
+%     mathematical characters.
 % \end{itemize}
 %
 % \subsection{Precedence of operators}
