--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -754,6 +754,32 @@
 %   this includes primitive-like commands defined using |{token.set_lua}|.
 % \end{function}
 %
+% \begin{function}[added = 2020-07-16, EXP, noTF]
+%   {\token_case_catcode:Nn, \token_case_charcode:Nn, \token_case_meaning:Nn}
+%   \begin{syntax}
+%     \cs{token_case_meaning:NnTF} \meta{test token} \\
+%     ~~"{" \\
+%     ~~~~\meta{token case_1} \Arg{code case_1} \\
+%     ~~~~\meta{token case_2} \Arg{code case_2} \\
+%     ~~~~\ldots \\
+%     ~~~~\meta{token case_n} \Arg{code case_n} \\
+%     ~~"}" \\
+%     ~~\Arg{true code}
+%     ~~\Arg{false code}
+%   \end{syntax}
+%   This function compares the \meta{test token} in turn with each of
+%   the \meta{token cases}. If the two are equal (as described for
+%   \cs{token_if_eq_catcode:NNTF}, \cs{token_if_eq_charcode:NNTF} and
+%   \cs{token_if_eq_meaning:NNTF}, respectively) then the associated
+%   \meta{code} is left in the input stream and other cases are
+%   discarded. If any of the cases are matched, the \meta{true code} is
+%   also inserted into the input stream (after the code for the
+%   appropriate case), while if none match then the \meta{false code} is
+%   inserted. The functions \cs{token_case_catcode:Nn},
+%   \cs{token_case_charcode:Nn}, and \cs{token_case_meaning:Nn}, which
+%   do nothing if there is no match, are also available.
+% \end{function}
+%
 % \section{Peeking ahead at the next token}
 %
 % There is often a need to look ahead at the next token in the input
@@ -2021,9 +2047,10 @@
 %<@@=token>
 %    \end{macrocode}
 %
-% \begin{variable}{\s_@@_stop}
+% \begin{variable}{\s_@@_mark, \s_@@_stop}
 %   Internal scan marks.
 %    \begin{macrocode}
+\scan_new:N \s_@@_mark
 \scan_new:N \s_@@_stop
 %    \end{macrocode}
 % \end{variable}
@@ -2686,6 +2713,72 @@ end
         \fi:
       }
   }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+%
+% \begin{macro}[EXP, noTF]
+%   {\token_case_catcode:Nn, \token_case_charcode:Nn, \token_case_meaning:Nn}
+% \begin{macro}[EXP]{\@@_case:NNnTF, \@@_case:NNw, \@@_case_end:nw}
+%   The aim here is to allow the case statement to be evaluated
+%   using a known number of expansion steps (two), and without
+%   needing to use an explicit \enquote{end of recursion} marker.
+%   That is achieved by using the test input as the final case,
+%   as this is always true. The trick is then to tidy up
+%   the output such that the appropriate case code plus either
+%   the \texttt{true} or \texttt{false} branch code is inserted.
+%    \begin{macrocode}
+\cs_new:Npn \token_case_catcode:Nn #1#2
+  { \exp:w \@@_case:NNnTF \token_if_eq_catcode:NNTF #1 {#2} { } { } }
+\cs_new:Npn \token_case_catcode:NnT #1#2#3
+  { \exp:w \@@_case:NNnTF \token_if_eq_catcode:NNTF #1 {#2} {#3} { } }
+\cs_new:Npn \token_case_catcode:NnF #1#2
+  { \exp:w \@@_case:NNnTF \token_if_eq_catcode:NNTF #1 {#2} { } }
+\cs_new:Npn \token_case_catcode:NnTF
+  { \exp:w \@@_case:NNnTF \token_if_eq_catcode:NNTF }
+\cs_new:Npn \token_case_charcode:Nn #1#2
+  { \exp:w \@@_case:NNnTF \token_if_eq_charcode:NNTF #1 {#2} { } { } }
+\cs_new:Npn \token_case_charcode:NnT #1#2#3
+  { \exp:w \@@_case:NNnTF \token_if_eq_charcode:NNTF #1 {#2} {#3} { } }
+\cs_new:Npn \token_case_charcode:NnF #1#2
+  { \exp:w \@@_case:NNnTF \token_if_eq_charcode:NNTF #1 {#2} { } }
+\cs_new:Npn \token_case_charcode:NnTF
+  { \exp:w \@@_case:NNnTF \token_if_eq_charcode:NNTF }
+\cs_new:Npn \token_case_meaning:Nn #1#2
+  { \exp:w \@@_case:NNnTF \token_if_eq_meaning:NNTF #1 {#2} { } { } }
+\cs_new:Npn \token_case_meaning:NnT #1#2#3
+  { \exp:w \@@_case:NNnTF \token_if_eq_meaning:NNTF #1 {#2} {#3} { } }
+\cs_new:Npn \token_case_meaning:NnF #1#2
+  { \exp:w \@@_case:NNnTF \token_if_eq_meaning:NNTF #1 {#2} { } }
+\cs_new:Npn \token_case_meaning:NnTF
+  { \exp:w \@@_case:NNnTF \token_if_eq_meaning:NNTF }
+\cs_new:Npn \@@_case:NNnTF #1#2#3#4#5
+  {
+    \@@_case:NNw #1 #2 #3 #2 { }
+    \s_@@_mark {#4}
+    \s_@@_mark {#5}
+    \s_@@_stop
+  }
+\cs_new:Npn \@@_case:NNw #1#2#3#4
+  {
+    #1 #2 #3
+      { \@@_case_end:nw {#4} }
+      { \@@_case:NNw #1 #2 }
+  }
+%    \end{macrocode}
+%   To tidy up the recursion, there are two outcomes. If there was a hit to
+%   one of the cases searched for, then |#1| is the code to insert,
+%   |#2| is the \emph{next} case to check on and |#3| is all of
+%   the rest of the cases code. That means that |#4| is the \texttt{true}
+%   branch code, and |#5| tidies up the spare \cs{s_@@_mark} and the
+%   \texttt{false} branch. On the other hand, if none of the cases matched
+%   then we arrive here using the \enquote{termination} case of comparing
+%   the search with itself. That means that |#1| is empty, |#2| is
+%   the first \cs{s_@@_mark} and so |#4| is the \texttt{false} code (the
+%   \texttt{true} code is mopped up by |#3|).
+%    \begin{macrocode}
+\cs_new:Npn \@@_case_end:nw #1#2#3 \s_@@_mark #4#5 \s_@@_stop
+  { \exp_end: #1 #4 }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
