Switch to ISO date format
Some test file changes will likely be altered again:
l3build approach needs adjustment here.

--- a/l3trial/l3auxdata/l3auxdata.dtx
+++ b/l3trial/l3auxdata/l3auxdata.dtx
@@ -669,7 +669,7 @@ Don't~ look~ here:~ check~ your~ console~ output!
 %
 %    \begin{macrocode}
 %<*pkg>
-\ProvidesExplPackage{l3auxdata}{2018/04/30}{}
+\ProvidesExplPackage{l3auxdata}{2018-04-30}{}
   {L3 Experimental auxiliary data}
 %</pkg>
 %    \end{macrocode}
