--- a/l3kernel/l3fp-assign.dtx
+++ b/l3kernel/l3fp-assign.dtx
@@ -38,7 +38,7 @@
 %          {latex-team@latex-project.org}^^A
 %    }^^A
 % }
-% \date{Released 2018/04/30}
+% \date{Released 2018-04-30}
 % \maketitle
 %
 % \begin{documentation}
