--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -67,7 +67,7 @@
 %    }^^A
 % }
 %
-% \date{Released 2018/04/30}
+% \date{Released 2018-04-30}
 %
 % \maketitle
 %
@@ -818,7 +818,7 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-\ProvidesExplPackage{xparse}{2018/04/30}{}
+\ProvidesExplPackage{xparse}{2018-04-30}{}
   {L3 Experimental document command parser}
 %    \end{macrocode}
 %
