--- a/l3trial/l3benchmark/l3benchmark.dtx
+++ b/l3trial/l3benchmark/l3benchmark.dtx
@@ -58,7 +58,7 @@
 %    }^^A
 % }
 %
-% \date{Released 2018/04/30}
+% \date{Released 2018-04-30}
 %
 % \maketitle
 %
@@ -129,7 +129,7 @@
 %
 %    \begin{macrocode}
 %<*package>
-\ProvidesExplPackage{l3benchmark}{2018/04/30}{}
+\ProvidesExplPackage{l3benchmark}{2018-04-30}{}
   {L3 Experimental benchmarking}
 %</package>
 %    \end{macrocode}
