--- a/l3trial/l3check/l3check.dtx
+++ b/l3trial/l3check/l3check.dtx
@@ -59,7 +59,7 @@
 %    }^^A
 % }
 %
-% \date{Released 2018/04/30}
+% \date{Released 2018-04-30}
 %
 % \maketitle
 %
@@ -230,7 +230,7 @@
 %
 %    \begin{macrocode}
 %<*package>
-\ProvidesExplPackage{l3check}{2018/04/30}{}
+\ProvidesExplPackage{l3check}{2018-04-30}{}
   {L3 Experimental checking and debugging}
 %</package>
 %    \end{macrocode}
