--- a/l3trial/l3image/l3image.dtx
+++ b/l3trial/l3image/l3image.dtx
@@ -44,7 +44,7 @@
 %    }^^A
 % }
 %
-% \date{Released 2018/04/30}
+% \date{Released 2018-04-30}
 %
 % \maketitle
 %
@@ -195,7 +195,7 @@
 %
 %    \begin{macrocode}
 %<*package>
-\ProvidesExplPackage{l3image}{2018/04/30}{}
+\ProvidesExplPackage{l3image}{2018-04-30}{}
   {L3 Experimental image inclusion support}
 %</package>
 %    \end{macrocode}
