--- a/l3trial/l3ldb/l3precom.dtx
+++ b/l3trial/l3ldb/l3precom.dtx
@@ -58,7 +58,7 @@
 %    }^^A
 % }
 %
-% \date{Released 2018/04/30}
+% \date{Released 2018-04-30}
 %
 % \maketitle
 %
@@ -86,7 +86,7 @@
 %    \begin{macrocode}
 %<*package>
 \RequirePackage{expl3}
-\ProvidesExplPackage{l3precom}{2018/04/30}{}
+\ProvidesExplPackage{l3precom}{2018-04-30}{}
   {L3 Experimental precompilation of functions}
 %    \end{macrocode}
 %
