--- a/l3trial/l3str-format-new/l3str-format-new.dtx
+++ b/l3trial/l3str-format-new/l3str-format-new.dtx
@@ -57,7 +57,7 @@
 %    }^^A
 % }
 %
-% \date{Released 2018/04/30}
+% \date{Released 2018-04-30}
 %
 % \maketitle
 %
@@ -271,7 +271,7 @@
 %
 %    \begin{macrocode}
 %<*package>
-\ProvidesExplPackage{l3str-format-new}{2018/04/30}{}
+\ProvidesExplPackage{l3str-format-new}{2018-04-30}{}
   {L3 Experimental formatting as strings}
 %</package>
 %    \end{macrocode}
