--- a/l3trial/l3trace/l3trace.dtx
+++ b/l3trial/l3trace/l3trace.dtx
@@ -59,7 +59,7 @@
 %    }^^A
 % }
 %
-% \date{Released 2018/04/30}
+% \date{Released 2018-04-30}
 %
 % \maketitle
 %
@@ -79,7 +79,7 @@
 %
 %    \begin{macrocode}
 %<*package>
-\ProvidesExplPackage{l3trace}{2018/04/30}{}
+\ProvidesExplPackage{l3trace}{2018-04-30}{}
   {L3 Experimental tracing of higher-level modules}
 %</package>
 %    \end{macrocode}
