--- a/l3trial/l3tree/l3tree.dtx
+++ b/l3trial/l3tree/l3tree.dtx
@@ -59,7 +59,7 @@
 %    }^^A
 % }
 %
-% \date{Released 2018/04/30}
+% \date{Released 2018-04-30}
 %
 % \maketitle
 %
@@ -99,7 +99,7 @@
 %
 %    \begin{macrocode}
 %<*package>
-\ProvidesExplPackage{l3tree}{2018/04/30}{}
+\ProvidesExplPackage{l3tree}{2018-04-30}{}
   {L3 Experimental tree manipulations}
 %</package>
 %    \end{macrocode}
