--- a/l3trial/xbox/xbox.dtx
+++ b/l3trial/xbox/xbox.dtx
@@ -58,7 +58,7 @@
 %    }^^A
 % }
 %
-% \date{Released 2018/04/30}
+% \date{Released 2018-04-30}
 %
 % \maketitle
 %
@@ -429,7 +429,7 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-\ProvidesExplPackage{xbox}{2018/04/30}{}
+\ProvidesExplPackage{xbox}{2018-04-30}{}
   {L3 Experimental document level boxes}
 %    \end{macrocode}
 %
