--- a/l3trial/xfont/xfss-setup.dtx
+++ b/l3trial/xfont/xfss-setup.dtx
@@ -44,7 +44,7 @@
 %    }^^A
 % }
 %
-% \date{Released 2018/04/30}
+% \date{Released 2018-04-30}
 % \maketitle
 % \tableofcontents
 %
@@ -64,7 +64,7 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-\ProvidesExplFile{xfss-setup.cfg}{2018/04/30}{}
+\ProvidesExplFile{xfss-setup.cfg}{2018-04-30}{}
   {L3 Experimental font selection setup}
 %    \end{macrocode}
 %
